# eer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  build_examples.sh  compile_commands.json  create-eer-app.sh  generate_eer_project.sh  lnav.json  options.cmake  preprocessor.cmake
boilerplate/: CMakeLists.txt  Makefile  README.md
boilerplate/include/components/: my_component.h
boilerplate/src/: main.c
boilerplate/src/components/: my_component.c
boilerplate/test/: my_component_test.c
cmake/: preprocessor.cmake
docs/: API.md  APPLY_VS_REACT.md  COMPONENTS.ms  IMPLEMENTATION_EER.md  IMPLEMENTATION_PLAN.md  PROFILING.md  REACT_FOR_MCUS.md  RELEASE_PROCESS.md  TESTING.md  TEST_PLAN.md  WHY_NOT.md
examples/: BasicExample.c  FancyTerminalExample.c  KeyboardExample.c  LifecycleExample.c
hal/: generic-gcc-avr.cmake  hal.cmake
hal/arm64/dbg/: ble.h  gpio.h  log.h  sys.h  timer.c  uart.c  vcd.c  vcd.h
hal/avr/: CMakeLists.txt  adc.c  atmega328p.c  atmega328p.h  avr.h  build.cmake  gpio.c  gpio.h  spi.c  timer.c  uart.c
hal/riscv/: CMakeLists.txt
hal/riscv/ch32v003/: .gdbinit  CMakeLists.txt  build.cmake  ch32v003.c  ch32v003.h  ch32v003.ld  ch32v003.s  gpio.c  gpio.h  sys.c  sys.h  timer.c  uart.c  uart.h
hal/riscv/ch573/: CMakeLists.txt  build.cmake  ch573.c  ch573.h  ch573.ld  ch573.s  gpio.c  gpio.h  sys.c  sys.h  timer.c  uart.c
hal/x86_64/: CMakeLists.txt  _dbg.c  _dbg.h  dbg.c  dbg.h
hal/x86_64/dbg/: CMakeLists.txt  dbg.h  gpio.c  gpio.h  log.c  sys.c  timer.c  timer.h  uart.c
include/: eer.h  eer.h.ptr  eer_app.h  eer_common.h  eer_comp.h  eer_lifecycle.h  eer_test.h  eers.h  hal.h  interface.h  log.h  lr.h  macros.h  magic.h  profiler.h  unit.h  version.h.in
profiler/: hash.h  log.c  log.h  profiler.c  profiler.h  test.h  test_utils.c  test_utils.h
scripts/: build_examples.sh  release.sh
src/: CMakeLists.txt  eer.c  hash.c  lr.c  profiler.c
test/: CMakeLists.txt  ContextTest.c  IgniteEarlyExitTest.c  IgniteHaltTest.c  LoopHookTest.c  LoopMacroTest.c  MultiLoopTest.c  MyComponent.c  ReactTest.c  SimpleTest.c  main.c  test_utils.c  test_utils.h
test/components/: MyComponent_test.c
toolchain/: generic-gcc-riscv.cmake
